# nsi_1er

./: .gitignore  README.md
.github/workflows/: codeql-analysis.yml
ASM/: README.md
C++/Qt5/: .gitignore
C++/Qt5/TextFinder/: CMakeLists.txt  TextFinder_fr_FR.ts  input.txt  textfinder.cpp  textfinder.h  textfinder.ui
C++/Qt5/calcV1/: CMakeLists.txt  button.cpp  button.h  mainwidget.cpp  mainwidget.ui
C++/Qt5/helloQt5/: CMakeLists.txt  widget.cpp  widget.ui
C++/Qt6/: .gitignore
C++/Qt6/Calculator/: CMakeLists.txt  button.cpp  button.h  main.cpp  widget.cpp  widget.h
C++/Qt6/GestionaireGarage/: CMakeLists.txt  Vehicule.cpp  Vehicule.h  main.cpp  widget.cpp  widget.h
C++/Qt6/HelloQ6_andForm/: CMakeLists.txt  widget.cpp  widget.ui
C++/Qt6/HelloQt6/: CMakeLists.txt  window.cpp  window.h
C++/Qt6/HelloQt6ForAndroid/: CMakeLists.txt  main.qml
C++/Qt6/helloQt6/: CMakeLists.txt  button.cpp  button.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  widget.cpp  widget.h
C++/Qt6/morpion/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
C++/base/helloWorld/: helloWorld.sln
C++/base/helloWorld_CMake/: CMakeLists.txt
C++/base/helloWorld_CMake/helloWorld_CMake/: CMakeLists.txt  helloWorld_CMake.cpp  helloWorld_CMake.h
C++/cours/pointeur/GestionMémoireInsuffisante/: CMakeLists.txt  GestionMémoireInsuffisante.cpp  GestionMémoireInsuffisante.h
C++/exercices/revision_ BoucleFor-ASCIIArt-Listes/: CMakeLists.txt  fonction.cpp  fonction.h  revision_ BoucleFor-ASCIIArt-Listes.cpp  revision_ BoucleFor-ASCIIArt-Listes.h
C++/games/Morpion/: CMakeLists.txt  Morpion.cpp  Morpion.h
C++/justTest/: CMakeLists.txt  CMakeSettings.json  justTest.cpp  justTest.h
C++/openGl/hello-OpenGl/: hello-OpenGl.sln
C++/project/ClassPile/: CMakeLists.txt  ClassPile.cpp  ClassPile.h  CmdInteract.cpp  CmdInteract.h  Pile.cpp  Pile.h  main.cpp  main.h
C++/project/ClassPile/CmdgamesCollections/: CMakeLists.txt  CmdgamesCollections.cpp  CmdgamesCollections.h  plusMoins.cpp  plusMoins.h  regulars.cpp  regulars.h
C++/project/allocationMemoire/: main.cpp
C++/project/animationASCII/: CMakeLists.txt  animationASCII.cpp  animationASCII.h  render.cpp  render.h
C++/project/animationASCII/animationASCII/: Render.h  animationASCII.cpp
C++/project/animationASCII/animationASCIIV2/: animationASCIIV2.cpp  animationASCIIV2.h
C++/project/animationASCII/animationASCIIV3/: CMakeLists.txt
C++/project/animationASCII/animationASCIIV4/: animationASCIIV4.cpp
C++/project/animationASCIIV2/: CMakeLists.txt
C++/project/animationASCIIV3/: animationASCIIV3.cpp  animationASCIIV3.h
C++/project/animationASCIIV4/: CMakeLists.txt  animationASCIIV4.h
C++/project/classPile/: CMakeLists.txt  Pile.cpp  Pile.h  main.cpp  main.h
C++/project/consoleGl/: CMakeLists.txt  consoleGl.cpp  consoleGl.h
C++/project/dichotomie/: CMakeLists.txt  dichotomie.cpp  dichotomie.h
C++/project/gestionVehicules/: CMakeLists.txt  Vehicule.cpp  Vehicule.h  gestionVehicules.cpp  gestionVehicules.h
C++/project/test/: test.cpp  test.sln  test.vcxproj
Python/: README.md  mainBap.py
Python/TKinter/calcWin/: main.py
Python/TKinter/helloTKinter/: classAppli.py  main.py
Python/exercice/: README.md
Python/exercice/08-12-2020/: main.py
Python/exercice/DicoFra-Eng/: README.md  solution.py
Python/exercice/Ex185And186P220/: main.py
Python/exercice/asciiArt/: main.py
Python/exercice/boutiqueDict/: main.py
Python/exercice/classPile/: classPile.py  main.py
Python/exercice/courEnLigneProf/: autoTiret.py  exploitation_csv.py  pda.csv  vrac2.py
Python/exercice/exercice1/: README.md  corectionSimple.py  corectionTkinter.py  correctionProtect.py  demande.md
Python/exercice/exercice2/: main.py
Python/exercice/exo138-139-140_p151/: ex140p151.py  responses.docx
Python/exercice/exo77p85/: README.md  correction.py
Python/exercice/piramideDesAges/: EntatBaptistePiramideDesAges.7z  compteRendu.docx  exploitation_csv.py  ~$mpteRendu.docx
Python/exercice/temp/: main.py
Python/exercice/trouveLeDoublon/: README.md  bone.py  solution.py
Python/lecon/base/: HelloWorld.py  README.md  arithmetique.py  boucleFor.py  boucleWhile.py  input.py  variableEtCalculeBasic.py
Python/lecon/classe/: PersonnageBasic.py  PersonnageHeriter.py  README.md  simplePersonnage.py
Python/lecon/conteneur/: README.md
Python/lecon/erreur/: tryAndExcept.py
Python/lecon/fluxFichier/: lecture.py  text.txt
Python/lecon/fonction+lambda/: fonctionBasic.py  lambda.py
Python/lecon/plusPlus/: tryAndExcept.py
Python/lecon/tkinter/: bouttonEvent.py  helloWindows copy.py  helloWindows.py  test.py
Python/module/common/: README.md  common.py  main.py  test_common.py
Python/module/network/: main.py  network.py
Python/module/screen/: screen.py  test_screen.py
Python/module/shared/: common.py  main.py
Python/moduleList/: List.py
Python/network/titre-name/: main.py  network.py
Python/openCv/fistTest/: main.py
Python/project/Mini-Project1/: id-0-notes.csv  id-1-notes.csv  main.py  proj.csv
Python/project/Mini-project1-V2/: .gitignore  Gateway.py  README.md  createCsv.py  main.py  product.csv  window.py  workNote.txt
Python/project/TKinter/: main.py
Python/project/calcWin/: main.py
Python/project/classPile/: classPile.py  main.py
Python/project/gandalf/: main.py
Python/project/gestionEleve/: data.txt  dataBase.py  fonction.py  main.py
Python/project/instanceControle/: main.py
Python/project/renduMonnaies/: gui.py  main.py  systemeMonetaire.py  test_GestionMonetaire.py  test_main.py
Python/project/sprite/: main.py  (+1 more)
c++/: README.md
c++/bricBracFolder/bricBrac/: CMakeLists.txt  bricBrac.cpp  bricBrac.h
c++/cours/basic/helloWorldCMAKE/: CMakeLists.txt  helloWorldCMAKE.cpp  helloWorldCMAKE.h
c++/cours/basic/input/: CMakeLists.txt  input.cpp  input.h
c++/cours/conteneurs/array/: CMakeLists.txt  array.cpp  array.h
c++/cours/conteneurs/tableau/: CMakeLists.txt  tableau.cpp  tableau.h
c++/cours/fonctions/fonction1/: CMakeLists.txt  fonction1.cpp  fonction1.h
module/: ModGeneral.py  ModList.py  test.py
(+149 files in other folders)
