# CMakeList.txt : projet CMake pour justTest, incluez la source et définissez
# la logique spécifique au projet ici.
#
cmake_minimum_required (VERSION 3.8)

project ("justTest")

# Ajoutez une source à l'exécutable de ce projet.
add_executable (justTest "justTest.cpp" "justTest.h")

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
