# CMakeList.txt : projet CMake pour revision_ BoucleFor-ASCIIArt-Listes, incluez la source et définissez
# la logique spécifique au projet ici.
#
cmake_minimum_required (VERSION 3.8)

project ("revision_ BoucleFor-ASCIIArt-Listes")

# Ajoutez une source à l'exécutable de ce projet.
add_executable (CMakeTarget "revision_ BoucleFor-ASCIIArt-Listes.cpp" "revision_ BoucleFor-ASCIIArt-Listes.h")

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
