# CMakeList.txt : projet CMake pour Morpion, incluez la source et définissez
# la logique spécifique au projet ici.
#
cmake_minimum_required (VERSION 3.8)

project ("Morpion")

# Ajoutez une source à l'exécutable de ce projet.
add_executable (Morpion "Morpion.cpp" "Morpion.h"  )

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
