# CMakeList.txt : projet CMake pour animationASCIIV2, incluez la source et définissez
# la logique spécifique au projet ici.
#
cmake_minimum_required (VERSION 3.8)

project ("animationASCIIV2")

# Ajoutez une source à l'exécutable de ce projet.
add_executable (animationASCIIV2 "animationASCIIV2.cpp" "animationASCIIV2.h")

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
