# CMakeList.txt : projet CMake pour animationASCIIV4, incluez la source et définissez
# la logique spécifique au projet ici.
#
cmake_minimum_required (VERSION 3.8)

project ("animationASCIIV4")

# Ajoutez une source à l'exécutable de ce projet.
add_executable (animationASCIIV4 "animationASCIIV4.cpp" "animationASCIIV4.h")

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
