# CMakeList.txt : projet CMake pour dichotomie, incluez la source et définissez
# la logique spécifique au projet ici.
#
cmake_minimum_required (VERSION 3.8)

project ("dichotomie")

# Ajoutez une source à l'exécutable de ce projet.
add_executable (dichotomie "dichotomie.cpp" "dichotomie.h")

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
