# CMakeList.txt : projet CMake pour bricBrac, incluez la source et définissez
# la logique spécifique au projet ici.
#
cmake_minimum_required (VERSION 3.8)

project ("bricBrac")

# Ajoutez une source à l'exécutable de ce projet.
add_executable (bricBrac "bricBrac.cpp" "bricBrac.h")

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
