# CMakeList.txt : projet CMake pour GestionMémoireInsuffisante, incluez la source et définissez
# la logique spécifique au projet ici.
#
cmake_minimum_required (VERSION 3.8)

project ("GestionMémoireInsuffisante")

# Ajoutez une source à l'exécutable de ce projet.
add_executable (CMakeTarget "GestionMémoireInsuffisante.cpp" "GestionMémoireInsuffisante.h")

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
