# CMakeList.txt : projet CMake pour animationASCIIV3, incluez la source et définissez
# la logique spécifique au projet ici.
#
cmake_minimum_required (VERSION 3.8)

project ("animationASCIIV3")

# Ajoutez une source à l'exécutable de ce projet.
add_executable (animationASCIIV3 "animationASCIIV3.cpp" "animationASCIIV3.h")

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
