# CMakeList.txt : projet CMake pour helloWorldCMAKE, incluez la source et définissez
# la logique spécifique au projet ici.
#
cmake_minimum_required (VERSION 3.8)

project ("helloWorldCMAKE")

# Ajoutez une source à l'exécutable de ce projet.
add_executable (helloWorldCMAKE "helloWorldCMAKE.cpp" "helloWorldCMAKE.h")

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
