# CMakeList.txt : projet CMake pour input, incluez la source et définissez
# la logique spécifique au projet ici.
#
cmake_minimum_required (VERSION 3.8)

project ("input")

# Ajoutez une source à l'exécutable de ce projet.
add_executable (input "input.cpp" "input.h")

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
