# CMakeList.txt : projet CMake pour array, incluez la source et définissez
# la logique spécifique au projet ici.
#
cmake_minimum_required (VERSION 3.8)

project ("array")

# Ajoutez une source à l'exécutable de ce projet.
add_executable (array "array.cpp" "array.h")

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
