# CMakeList.txt : projet CMake pour tableau, incluez la source et définissez
# la logique spécifique au projet ici.
#
cmake_minimum_required (VERSION 3.8)

project ("tableau")

# Ajoutez une source à l'exécutable de ce projet.
add_executable (tableau "tableau.cpp" "tableau.h")

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
