# CMakeList.txt : projet CMake pour fonction1, incluez la source et définissez
# la logique spécifique au projet ici.
#
cmake_minimum_required (VERSION 3.8)

project ("fonction1")

# Ajoutez une source à l'exécutable de ce projet.
add_executable (fonction1 "fonction1.cpp" "fonction1.h")

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
